[gd_scene load_steps=3 format=3 uid="uid://ccuans6waho1s"]

[ext_resource type="Script" path="res://scripts/projectile_spawner.gd" id="1_8830j"]
[ext_resource type="PackedScene" uid="uid://cmw4m1l5e3tnq" path="res://projectiles/projectile.tscn" id="2_hnyyr"]

[node name="ProjectileSpawner" type="Node2D"]
script = ExtResource("1_8830j")
projectile = ExtResource("2_hnyyr")

[node name="ProjectileContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
physics_interpolation_mode = 2
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
